--- a/register.html
+++ b/register.html
@@ -9,40 +9,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      body,
-      html {
-        height: 100%;
-        background-color: #f8f9fa;
-      }
-      .register-container {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .register-card {
-        width: 100%;
-        max-width: 450px;
-        padding: 2rem;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        background-color: #fff;
-      }
-    </style>
   </head>
   <body>
-    <div class="register-container">
-      <div class="register-card">
-        <h2 class="mb-4 text-center">Create an Account</h2>
+    <section class="authentication_section">
+      <div class="register_card">
+        <h2 class="mb-5 text-center">Create an Account</h2>
         <form>
           <div class="mb-3">
-            <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" required />
-          </div>
-          <div class="mb-3">
-            <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" required />
+            <label for="firstName" class="form-label">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              required
+              placeholder="Your name"
+            />
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
@@ -60,7 +41,7 @@
               type="password"
               class="form-control"
               id="password"
-              placeholder="Enter password"
+              placeholder="Type password"
               required
             />
           </div>
@@ -82,7 +63,7 @@
           Already have an account? <a href="login.html">Login here</a>
         </p>
       </div>
-    </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
