--- a/cart.html
+++ b/cart.html
@@ -11,112 +11,145 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-4"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html">ShopNow</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shop.html">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="cart.html">Cart</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+    <!-- ===== Navbar HTML -->
+    <header>
+      <nav class="navbar bg-primary navbar-expand-lg navbar-dark py-4">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="index.html">ShopNow</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="shop.html">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold active" href="cart.html"
+                  >Cart(3)</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
+    <!-- ===== Navbar HTML End -->
 
-    <section
-      class="page-title d-flex align-items-center justify-content-center mb-4"
-    >
+    <!-- ===== Page Title HTML -->
+    <section class="page_title">
       <div class="container text-center">
-        <h1 class="fw-bold text-white">Cart</h1>
+        <h1 class="fw-bold">Cart</h1>
       </div>
     </section>
+    <!-- ===== Page Title HTML End -->
 
-    <!-- Cart Section -->
-    <main class="container mb-5">
-      <div class="table-responsive">
-        <table class="table align-middle">
-          <thead>
-            <tr>
-              <th>Product</th>
-              <th>Price</th>
-              <th>Quantity</th>
-              <th>Total</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Product 1</td>
-              <td>$29.99</td>
-              <td>
-                <input type="number" class="form-control w-50" value="1" />
-              </td>
-              <td>$29.99</td>
-              <td><button class="btn btn-sm btn-danger">Remove</button></td>
-            </tr>
-            <tr>
-              <td>Product 2</td>
-              <td>$39.99</td>
-              <td>
-                <input type="number" class="form-control w-50" value="2" />
-              </td>
-              <td>$79.98</td>
-              <td><button class="btn btn-sm btn-danger">Remove</button></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <!-- ===== Cart Section CSS -->
+    <section class="cart_section">
+      <div class="container">
+        <div class="table-responsive">
+          <table class="table align-middle table-bordered">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th class="text-center">Price</th>
+                <th class="text-center">Quantity</th>
+                <th class="text-center">Total</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Premium Cotton Half Sleeve Casual Shirt for Men</td>
+                <td class="text-end">$29.99</td>
+                <td>
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    value="1"
+                  />
+                </td>
+                <td class="text-end">$29.99</td>
+                <td class="text-end">
+                  <button class="btn btn-sm btn-danger">Remove</button>
+                </td>
+              </tr>
+              <tr>
+                <td>Cotton Half Sleeve Casual Shirt for Men</td>
+                <td class="text-end">$39.99</td>
+                <td>
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    value="2"
+                  />
+                </td>
+                <td class="text-end">$79.98</td>
+                <td class="text-end">
+                  <button class="btn btn-sm btn-danger">Remove</button>
+                </td>
+              </tr>
+              <tr>
+                <td>Stylish Cotton Half Sleeve Casual Shirt for Men</td>
+                <td class="text-end">$39.99</td>
+                <td>
+                  <input
+                    type="number"
+                    class="form-control form-control-sm"
+                    value="2"
+                  />
+                </td>
+                <td class="text-end">$79.98</td>
+                <td class="text-end">
+                  <button class="btn btn-sm btn-danger">Remove</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-      <!-- Promo Code Section -->
-      <div class="row mb-4">
-        <div class="col-md-6">
-          <h5>Have a Promo Code?</h5>
-          <form class="d-flex">
-            <input
-              type="text"
-              class="form-control me-2"
-              placeholder="Enter promo code"
-            />
-            <button class="btn btn-outline-secondary" type="submit">
-              Apply
-            </button>
-          </form>
+        <!-- Promo Code Section -->
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <h5>Have a Promo Code?</h5>
+            <form class="d-flex">
+              <input
+                type="text"
+                class="form-control me-2"
+                placeholder="Enter promo code"
+              />
+              <button class="btn btn-outline-primary" type="submit">
+                Apply
+              </button>
+            </form>
+          </div>
+        </div>
+
+        <div class="text-end mt-5">
+          <h5>Subtotal: $109.97</h5>
+          <a href="checkout.html" class="btn btn-lg btn-primary mt-2"
+            >Proceed to Checkout</a
+          >
         </div>
       </div>
+    </section>
+    <!-- ===== Cart Section CSS End -->
 
-      <div class="text-end">
-        <h5>Subtotal: $109.97</h5>
-        <a href="checkout.html" class="btn btn-primary">Proceed to Checkout</a>
-      </div>
-    </main>
-
-    <!-- Footer -->
+    <!-- ===== Footer HTML -->
     <footer class="bg-light py-4 border-top mt-auto">
       <div class="container text-center">
-        <p class="mb-0">&copy; 2025 ShopNow. All rights reserved.</p>
+        <p class="mb-0">Copyright &copy; 2025 ShopNow. All rights reserved.</p>
       </div>
     </footer>
+    <!-- ===== Footer HTML End -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
