--- a/checkout.html
+++ b/checkout.html
@@ -11,171 +11,199 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-4"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html">ShopNow</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shop.html">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cart.html">Cart</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="checkout.html">Checkout</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+    <!-- ===== Navbar HTML -->
+    <header>
+      <nav class="navbar bg-primary navbar-expand-lg navbar-dark py-4">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="index.html">ShopNow</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="shop.html">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="cart.html">Cart(3)</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
+    <!-- ===== Navbar HTML End -->
 
-    <section
-      class="page-title d-flex align-items-center justify-content-center mb-4"
-    >
+    <!-- ===== Page Title HTML -->
+    <section class="page_title">
       <div class="container text-center">
-        <h1 class="fw-bold text-white">Checkout</h1>
+        <h1 class="fw-bold">Checkout</h1>
       </div>
     </section>
+    <!-- ===== Page Title HTML End -->
 
-    <!-- Checkout Form -->
-    <main class="container mb-5">
-      <form>
-        <!-- Shipping Information -->
-        <div class="row mb-3">
-          <div class="col-md-6">
-            <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" required />
-          </div>
-          <div class="col-md-6">
-            <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" required />
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" required />
-        </div>
-        <div class="mb-3">
-          <label for="address" class="form-label">Address</label>
-          <input type="text" class="form-control" id="address" required />
-        </div>
-        <div class="row mb-3">
-          <div class="col-md-6">
-            <label for="city" class="form-label">City</label>
-            <input type="text" class="form-control" id="city" required />
-          </div>
-          <div class="col-md-3">
-            <label for="state" class="form-label">State</label>
-            <input type="text" class="form-control" id="state" required />
-          </div>
-          <div class="col-md-3">
-            <label for="zip" class="form-label">Zip</label>
-            <input type="text" class="form-control" id="zip" required />
-          </div>
-        </div>
+    <!-- ===== Checkout Section HTML -->
+    <section class="checkout_section">
+      <div class="container mb-5">
+        <form>
+          <div class="row">
+            <div class="col-md-12 col-lg-6">
+              <h5 class="mb-3">Your Info</h5>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <label for="firstName" class="form-label">First Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="firstName"
+                    required
+                  />
+                </div>
+                <div class="col-md-6">
+                  <label for="lastName" class="form-label">Last Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="lastName"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
 
-        <!-- Delivery Information -->
-        <h5 class="mb-3 mt-4">Delivery Information</h5>
-        <div class="mb-3">
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="deliveryMethod"
-              id="cod"
-              value="cod"
-              checked
-            />
-            <label class="form-check-label" for="cod">Cash on Delivery</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="deliveryMethod"
-              id="bkash"
-              value="bkash"
-            />
-            <label class="form-check-label" for="bkash">Bkash</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="deliveryMethod"
-              id="nagad"
-              value="nagad"
-            />
-            <label class="form-check-label" for="nagad">Nagad</label>
-          </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="deliveryMethod"
-              id="bank"
-              value="bank"
-            />
-            <label class="form-check-label" for="bank">Bank Transfer</label>
-          </div>
-        </div>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <label for="city" class="form-label">City</label>
+                  <input type="text" class="form-control" id="city" required />
+                </div>
+                <div class="col-md-3">
+                  <label for="state" class="form-label mt3">State</label>
+                  <input type="text" class="form-control" id="state" required />
+                </div>
+                <div class="col-md-3">
+                  <label for="zip" class="form-label mt3">Zip</label>
+                  <input type="text" class="form-control" id="zip" required />
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" id="address" required />
+              </div>
+            </div>
+            <div class="col-md-12 col-lg-6">
+              <!-- Delivery Information -->
+              <h5 class="mb-3">Delivery Information</h5>
+              <div class="d-lg-flex gap-4">
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="deliveryMethod"
+                    id="cod"
+                    value="cod"
+                    checked
+                  />
+                  <label class="form-check-label" for="cod"
+                    >Cash on Delivery</label
+                  >
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="deliveryMethod"
+                    id="bkash"
+                    value="bkash"
+                  />
+                  <label class="form-check-label" for="bkash">Bkash</label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="deliveryMethod"
+                    id="nagad"
+                    value="nagad"
+                  />
+                  <label class="form-check-label" for="nagad">Nagad</label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="deliveryMethod"
+                    id="bank"
+                    value="bank"
+                  />
+                  <label class="form-check-label" for="bank"
+                    >Bank Transfer</label
+                  >
+                </div>
+              </div>
+              <h5 class="mb-3 mt-4">Payment</h5>
+              <div class="mb-3">
+                <label for="cardName" class="form-label">Name on Card</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="cardName"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="cardNumber" class="form-label">Card Number</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="cardNumber"
+                  required
+                />
+              </div>
+              <div class="row mb-4">
+                <div class="col-md-6">
+                  <label for="expiry" class="form-label">Expiration</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="expiry"
+                    placeholder="MM/YY"
+                    required
+                  />
+                </div>
+                <div class="col-md-6">
+                  <label for="cvv" class="form-label mt3">CVV</label>
+                  <input type="text" class="form-control" id="cvv" required />
+                </div>
+              </div>
 
-        <!-- Payment -->
-        <hr class="my-4" />
-        <h5 class="mb-3">Payment</h5>
-        <div class="mb-3">
-          <label for="cardName" class="form-label">Name on Card</label>
-          <input type="text" class="form-control" id="cardName" required />
-        </div>
-        <div class="mb-3">
-          <label for="cardNumber" class="form-label">Card Number</label>
-          <input type="text" class="form-control" id="cardNumber" required />
-        </div>
-        <div class="row mb-4">
-          <div class="col-md-6">
-            <label for="expiry" class="form-label">Expiration</label>
-            <input
-              type="text"
-              class="form-control"
-              id="expiry"
-              placeholder="MM/YY"
-              required
-            />
+              <button type="submit" class="btn btn-primary w-100 fw-bold">
+                Place Order
+              </button>
+            </div>
           </div>
-          <div class="col-md-6">
-            <label for="cvv" class="form-label">CVV</label>
-            <input type="text" class="form-control" id="cvv" required />
-          </div>
-        </div>
+        </form>
+      </div>
+    </section>
+    <!-- ===== Checkout Section HTML End -->
 
-        <button type="submit" class="btn btn-primary w-100">Place Order</button>
-      </form>
-    </main>
-
-    <!-- Footer -->
+    <!-- ===== Footer HTML -->
     <footer class="bg-light py-4 border-top mt-auto">
       <div class="container text-center">
-        <p class="mb-0">&copy; 2025 ShopNow. All rights reserved.</p>
+        <p class="mb-0">Copyright &copy; 2025 ShopNow. All rights reserved.</p>
       </div>
     </footer>
+    <!-- ===== Footer HTML End -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
