--- a/contact.html
+++ b/contact.html
@@ -8,98 +8,117 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-4"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html">ShopNow</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shop.html">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cart.html">Cart</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="checkout.html">Checkout</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contact.html">Contact</a>
-            </li>
-          </ul>
+    <!-- ===== Navbar HTML -->
+    <header>
+      <nav class="navbar bg-primary navbar-expand-lg navbar-dark py-4">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="index.html">ShopNow</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="shop.html">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold active" href="contact.html"
+                  >Contact</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="cart.html">Cart(3)</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <section
-      class="page-title d-flex align-items-center justify-content-center mb-4"
-    >
+      </nav>
+    </header>
+    <!-- ===== Navbar HTML End -->
+
+    <!-- ===== Page Title HTML -->
+    <section class="page_title">
       <div class="container text-center">
-        <h1 class="fw-bold text-white">Contact Us</h1>
+        <h1 class="fw-bold">Contact Us</h1>
       </div>
     </section>
+    <!-- ===== Page Title HTML End -->
 
-    <!-- Contact Info & Form -->
-    <main class="container mb-5">
-      <div class="row">
-        <div class="col-md-6 mb-4">
-          <h5>Our Contact Details</h5>
-          <p><strong>Phone:</strong> +880 1234 567890</p>
-          <p><strong>Email:</strong> support@shopnow.com</p>
-          <p>
-            <strong>Address:</strong> 123 Market Road, Dhaka 1207, Bangladesh
-          </p>
-        </div>
-        <div class="col-md-6">
-          <form>
-            <div class="mb-3">
-              <label for="name" class="form-label">Your Name</label>
-              <input type="text" class="form-control" id="name" required />
+    <!-- Contact Section HTML -->
+    <section class="contact_section">
+      <!-- Contact Info & Form -->
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 mb-4">
+            <div class="contact_box">
+              <h2 class="mb-4">Our Contact Details</h2>
+              <p class="contact_info">
+                <i class="bi bi-telephone-fill"></i>
+                <strong>Phone:</strong> +880 1234 567890
+              </p>
+              <p class="contact_info">
+                <i class="bi bi-envelope-fill"></i>
+                <strong>Email:</strong> support@shopnow.com
+              </p>
+              <p class="contact_info">
+                <i class="bi bi-geo-alt-fill"></i>
+                <strong>Address:</strong> 123 Market Road, Dhaka 1207,
+                Bangladesh
+              </p>
             </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" required />
-            </div>
-            <div class="mb-3">
-              <label for="subject" class="form-label">Subject</label>
-              <input type="text" class="form-control" id="subject" required />
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea
-                class="form-control"
-                id="message"
-                rows="5"
-                required
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send Message</button>
-          </form>
+          </div>
+          <div class="col-md-6">
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Your Name</label>
+                <input type="text" class="form-control" id="name" required />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
+              <div class="mb-3">
+                <label for="subject" class="form-label">Subject</label>
+                <input type="text" class="form-control" id="subject" required />
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">
+                Send Message
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-    </main>
+    </section>
+    <!-- Contact Section HTML End -->
 
-    <!-- Footer -->
+    <!-- ===== Footer HTML -->
     <footer class="bg-light py-4 border-top mt-auto">
       <div class="container text-center">
-        <p class="mb-0">&copy; 2025 ShopNow. All rights reserved.</p>
+        <p class="mb-0">Copyright &copy; 2025 ShopNow. All rights reserved.</p>
       </div>
     </footer>
+    <!-- ===== Footer HTML End -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
