--- a/login.html
+++ b/login.html
@@ -9,32 +9,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      body,
-      html {
-        height: 100%;
-        background-color: #f8f9fa;
-      }
-      .login-container {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .login-card {
-        width: 100%;
-        max-width: 400px;
-        padding: 2rem;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
-        background-color: #fff;
-      }
-    </style>
   </head>
   <body>
-    <div class="login-container">
-      <div class="login-card">
-        <h2 class="mb-4 text-center">Login to ShopNow</h2>
+    <section class="authentication_section">
+      <div class="register_card">
+        <h2 class="mb-5 text-center">Login to ShopNow</h2>
         <form>
           <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
@@ -66,7 +45,7 @@
           Don't have an account? <a href="register.html">Register here</a>
         </p>
       </div>
-    </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
