--- a/shop.html
+++ b/shop.html
@@ -11,226 +11,263 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-4"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html">ShopNow</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="shop.html">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cart.html">Cart</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+    <!-- ===== Navbar HTML -->
+    <header>
+      <nav class="navbar bg-primary navbar-expand-lg navbar-dark py-4">
+        <div class="container">
+          <a class="navbar-brand fw-bold" href="index.html">ShopNow</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link fw-semibold active" href="shop.html">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-semibold" href="cart.html">Cart(3)</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <section
-      class="page-title d-flex align-items-center justify-content-center mb-4"
-    >
+      </nav>
+    </header>
+    <!-- ===== Navbar HTML End -->
+
+    <!-- ===== Page Title HTML -->
+    <section class="page_title">
       <div class="container text-center">
-        <h1 class="fw-bold text-white">All Products</h1>
+        <h1 class="fw-bold">All Products</h1>
       </div>
     </section>
+    <!-- ===== Page Title HTML End -->
 
-    <!-- Shop Grid -->
-    <main class="container mb-5">
-      <div class="row">
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 1</h5>
-              <p class="card-text">$29.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+    <!-- ===== Feature Product HTML -->
+    <section class="feature_product just_for_you">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/f1.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Premium Cotton Half Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$59.99</p>
+                <div class="rating mb-1">★★★★☆</div>
+                <div class="sold mb-2">Sold: 120</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 2</h5>
-              <p class="card-text">$39.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/f2.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Stylish Half Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$39.99</p>
+                <div class="rating mb-1">★★★☆☆</div>
+                <div class="sold mb-2">Sold: 85</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 3</h5>
-              <p class="card-text">$24.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/f3.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  New Cotton Half Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$25.50</p>
+                <div class="rating mb-1">★★★★★</div>
+                <div class="sold mb-2">Sold: 210</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/f4.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Premium Cotton Half Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$19.99</p>
+                <div class="rating mb-1">★★★★☆</div>
+                <div class="sold mb-2">Sold: 150</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n1.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Premium Cotton Full Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$59.99</p>
+                <div class="rating mb-1">★★★★☆</div>
+                <div class="sold mb-2">Sold: 120</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n2.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Stylish Full Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$39.99</p>
+                <div class="rating mb-1">★★★☆☆</div>
+                <div class="sold mb-2">Sold: 85</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n3.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  New Cotton Full Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$25.50</p>
+                <div class="rating mb-1">★★★★★</div>
+                <div class="sold mb-2">Sold: 210</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n4.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Premium Cotton Half Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$19.99</p>
+                <div class="rating mb-1">★★★★☆</div>
+                <div class="sold mb-2">Sold: 150</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n5.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Premium Cotton Full Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$59.99</p>
+                <div class="rating mb-1">★★★★☆</div>
+                <div class="sold mb-2">Sold: 120</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n6.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Stylish 3 Quarter Twill Fabrics Pant for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$39.99</p>
+                <div class="rating mb-1">★★★☆☆</div>
+                <div class="sold mb-2">Sold: 85</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n7.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  New Cotton Full Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$25.50</p>
+                <div class="rating mb-1">★★★★★</div>
+                <div class="sold mb-2">Sold: 210</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-3 mb-4">
-          <div class="card h-100">
-            <img
-              src="https://placehold.co/600x400"
-              class="card-img-top"
-              alt="Product"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Product 4</h5>
-              <p class="card-text">$49.99</p>
-              <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+
+          <div class="col-md-3 col-sm-6">
+            <div class="card product_card h-100">
+              <img src="images/n8.jpg" class="card-img-top" alt="Product" />
+              <div class="card-body">
+                <h6 class="card-title">
+                  Premium Cotton Half Sleeve Casual Shirt for Men
+                </h6>
+                <p class="text-danger fw-bold mb-1">$19.99</p>
+                <div class="rating mb-1">★★★★☆</div>
+                <div class="sold mb-2">Sold: 150</div>
+                <a href="cart.html" class="btn btn-sm btn-primary w-100"
+                  >Add to Cart</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </main>
+    </section>
+    <!-- ===== Feature Product HTML End -->
 
-    <!-- Footer -->
+    <!-- ===== Footer HTML -->
     <footer class="bg-light py-4 border-top mt-auto">
       <div class="container text-center">
-        <p class="mb-0">&copy; 2025 ShopNow. All rights reserved.</p>
+        <p class="mb-0">Copyright &copy; 2025 ShopNow. All rights reserved.</p>
       </div>
     </footer>
+    <!-- ===== Footer HTML End -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
